@@ -1,10 +1,11 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-#' This function uses the Boost Date_Time library to parse
-#' datetimes (and dates) from strings, integers or even numeric values
-#' (which are cast to strings internall). It returns a vector of
-#' \code{POSIXct} objects. These represent dates and time as (possibly
+#' These function use the Boost Date_Time library to parse
+#' datetimes (and dates) from strings, integers, factors or even numeric values
+#' (which are cast to strings internall). They return a vector of
+#' \code{POSIXct} objects (or \code{Date} objects in the case of \code{anydate}).
+#' \code{POSIXct} objects represent dates and time as (possibly
 #' fractional) seconds since the \sQuote{epoch} of January 1, 1970.
 #' A timezone can be set, if none is supplied \sQuote{UTC} is set.
 #'
@@ -23,14 +24,16 @@
 #' @param x A vector of type character, integer or numeric with
 #' date(time) expressions to be parsed and converted.
 #' @param tz A string with the timezone, defaults to \sQuote{UTC} if unset
-#' @return A vector of \sQuote{POSIXct} elements.
+#' @return A vector of \code{POSIXct} elements, or, in the case of \code{anydate},
+#' a vector of \code{Date} objects.
+#' @seealso \code{\link{anytime-package}}
 #' @author Dirk Eddelbuettel
 #' @examples
-#' ## See the source code (hah!) for a full list of formats
+#' ## See the source code for a full list of formats, and the
+#' ## or the reference in help('anytime-package') for details
 #' times <- c("2004-03-21 12:45:33.123456",
 #'           "2004/03/21 12:45:33.123456",
 #'           "20040321 124533.123456",
-#'           "21.03.2004 12:45:33.123456",
 #'           "03/21/2004 12:45:33.123456",
 #'           "03-21-2004 12:45:33.123456",
 #'           "2004-03-21",
@@ -38,7 +41,8 @@
 #'           "03/21/2004",
 #'           "03-21-2004",
 #'           "20010101")
-#' anytime_cpp(times)
+#' anytime(times)
+#' anydate(times)
 anytime_cpp <- function(x, tz = "UTC") {
     .Call('anytime_anytime_cpp', PACKAGE = 'anytime', x, tz)
 }
