@@ -1,6 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/RcppExports.R, R/anytime.R
 \name{anytime_cpp}
+\alias{anydate}
 \alias{anytime}
 \alias{anytime_cpp}
 \title{Parse POSIXct objects from input data}
@@ -8,6 +9,8 @@
 anytime_cpp(x, tz = "UTC")
 
 anytime(x, tz = getTZ())
+
+anydate(x, tz = getTZ())
 }
 \arguments{
 \item{x}{A vector of type character, integer or numeric with
@@ -16,13 +19,15 @@ date(time) expressions to be parsed and converted.}
 \item{tz}{A string with the timezone, defaults to \sQuote{UTC} if unset}
 }
 \value{
-A vector of \sQuote{POSIXct} elements.
+A vector of \code{POSIXct} elements, or, in the case of \code{anydate},
+a vector of \code{Date} objects.
 }
 \description{
-This function uses the Boost Date_Time library to parse
-datetimes (and dates) from strings, integers or even numeric values
-(which are cast to strings internall). It returns a vector of
-\code{POSIXct} objects. These represent dates and time as (possibly
+These function use the Boost Date_Time library to parse
+datetimes (and dates) from strings, integers, factors or even numeric values
+(which are cast to strings internall). They return a vector of
+\code{POSIXct} objects (or \code{Date} objects in the case of \code{anydate}).
+\code{POSIXct} objects represent dates and time as (possibly
 fractional) seconds since the \sQuote{epoch} of January 1, 1970.
 A timezone can be set, if none is supplied \sQuote{UTC} is set.
 }
@@ -39,11 +44,11 @@ microseconds, the Boost compile-time option for nano-second resolution
 has not been enabled.
 }
 \examples{
-## See the source code (hah!) for a full list of formats
+## See the source code for a full list of formats, and the
+## or the reference in help('anytime-package') for details
 times <- c("2004-03-21 12:45:33.123456",
           "2004/03/21 12:45:33.123456",
           "20040321 124533.123456",
-          "21.03.2004 12:45:33.123456",
           "03/21/2004 12:45:33.123456",
           "03-21-2004 12:45:33.123456",
           "2004-03-21",
@@ -51,9 +56,13 @@ times <- c("2004-03-21 12:45:33.123456",
           "03/21/2004",
           "03-21-2004",
           "20010101")
-anytime_cpp(times)
+anytime(times)
+anydate(times)
 }
 \author{
 Dirk Eddelbuettel
+}
+\seealso{
+\code{\link{anytime-package}}
 }
 
